kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress

spec:
  ingressClassName: traefik
  rules:
    - host: node-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app
                port:
                  number: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  ports:
  - port: 3000
    name: web
    targetPort: 3000
  selector:
    app: node-app
